--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -11,7 +11,9 @@
     <LinearLayout
         android:orientation="vertical"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="50dp"
+        >
 
         <androidx.appcompat.widget.SearchView
             app:defaultQueryHint="请输入搜索的内容"
@@ -52,12 +54,13 @@
             android:layout_height="match_parent"/>
 
 
+        <com.google.android.material.tabs.TabLayout
+            android:id="@+id/tab_home"
+            android:background="#fff"
+            app:tabSelectedTextColor="#FF0000"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/recyclerLabel_home"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                />
-        <ListView
                 android:id="@+id/listXinwen_home"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
