--- a/app/src/main/res/layout/item_buschaild.xml
+++ b/app/src/main/res/layout/item_buschaild.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/name"
+        android:id="@+id/name_bus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="TextView"
