--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -17,6 +17,11 @@
         android:title="智慧环保" />
 
     <item
+        android:id="@+id/navigation_xinwen"
+        android:icon="@drawable/ic_notifications_black_24dp"
+        android:title="新闻" />
+
+    <item
         android:id="@+id/navigation_personal"
         android:icon="@drawable/ic_notifications_black_24dp"
         android:title="个人中心" />
